feat: implementing tanstack
